# hoops-edge

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
hoops_edge/: __main__.py  cli.py  config.py
hoops_edge/data/fixtures/props/: BOS@NYK_2024-02-24.json
hoops_edge/ingest/: mapping.py  odds_provider.py  props_provider.py  stats_provider.py
hoops_edge/models/: features.py  pricing.py  simulator.py
hoops_edge/output/: excel.py
hoops_edge/utils/: cache.py  log.py
tests/fixtures/odds/: 2024-02-24_bos_at_nyk.json
tests/integration/: test_cli_replay.py
tests/unit/: test_devig.py  test_excel_headers.py  test_mapping.py  test_pricing.py
